# creating-an-open-source-project-in-python-3085072

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  reminder.p  reminder.py  tests.py  tox.ini
.github/workflows/: check.yaml
