[tool.poetry]
name = "oss-in-python"
version = "0.1.0"
description = "My first open source/poetry project in python"
authors = ["josfam <josephamukun@tutanota.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oss_in_python"}]

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
