[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "My first open source/poetry project in python"
authors = ["josfam <josephamukun@tutanota.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1"
click = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
